--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,6 +1,6 @@
 2004-09-05  Yamami  <yamamimail@users.sourceforge.jp>
 
-        * src/servers/mones Code:Mones Ver0.11 ソースツリーに追加。ただしデフォルトではMaku非対象
+        * src/servers/mones Code:Mones Ver0.11 ソースツリーに追加。ただしデフォルトではmake非対象
 
 2004-09-01  higepon  <higepon@users.sourceforge.jp>
 
