--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,7 @@
 2004-09-09  higepon  <higepon@users.sourceforge.jp>
 
+        * samples/non-gui/hello/hello.cpp : PCIテストコードを追加
+
         * src/kernel/Process.cpp (kill): sendKilledMessage()をコメントアウト。
 
 2004-09-08  higepon  <higepon@users.sourceforge.jp>
