--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,7 +1,11 @@
+2004-09-21  higepon  <higepon@users.sourceforge.jp>
+
+        * src/kernel/kernel.cpp (mainProcess): invlpg命令を使用したコスト計測
+
 2004-09-20  Yamami  <yamamimail@users.sourceforge.jp>
 
         * src/servers/mones Code:Mones Ver0.12 MoIp,MoIcmpクラス追加 ICMP応答
-        
+
 2004-09-19  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/kernel.cpp (mainProcess): rdtscでCR3の切替コストの計測
