--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,7 @@
 2004-10-07  higepon  <higepon@users.sourceforge.jp>
 
+        * src/lib/monapi/syscall.cpp (syscall_get_memory_info): メモリ･ページ情報取得システムコール追加
+
         * src/kernel/PageManager.cpp (getPagePoolInfo): ページ情報追加
 
         * src/lib/monapi/MemoryManager.cpp (free): syscall_free_pagesの組み込み
