--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-23  higepon  <higepon@users.sourceforge.jp>
+
+        * wabaの削除
+
 2004-10-21  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/Process.cpp (kill): Kill時にカーネルがハングするバグを修正
