--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,11 @@
+2004-10-25  higepon  <higepon@users.sourceforge.jp>
+
+        * bin/roo/APPS/TINOGUI.MSH : ’Ç‰Á
+
+        * bin/roo/APPS/BAYGUI.MSH : ’Ç‰Á
+
+        * bin/roo/APPS/STARTGUI.MSH : íœ
+
 2004-10-24  bayside  <bayside@users.sourceforge.jp>
 
         * tools/t5lzma/Compress/LZMA_Alone/Makefile: msys‚Å‚àcygwin‚Å‚àƒrƒ‹ƒh‚ª’Ê‚é‚æ‚¤‚ÉC³
