--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,11 @@
+2004-10-26  bayside  <bayside@users.sourceforge.jp>
+
+        * apps/baygui: 品質向上
+
+        * lib/baygui: 品質向上
+
+        * servers/baygui: 品質向上
+
 2004-10-26  higepon  <higepon@users.sourceforge.jp>
 
         * src/servers/moniter/main.cpp (CheckServers): chshでシェルが自動で起動されてしまう件に対処
