--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-30  higepon  <higepon@users.sourceforge.jp>
+
+        * TINOGUI.MSH -> STARTMF.MSH‚É‰ü–¼
+
+        * TinoGUI->MonaForms‚É‰ü–¼
+
 2004-10-26  bayside  <bayside@users.sourceforge.jp>
 
         * apps/baygui: •i¿Œüã
