--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,7 @@
 2004-10-30  higepon  <higepon@users.sourceforge.jp>
 
+        * .cvsignore‚Ì®—
+
         * TINOGUI.MSH -> STARTMF.MSH‚É‰ü–¼
 
         * TinoGUI->MonaForms‚É‰ü–¼
