--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-30  bayside  <bayside@users.sourceforge.jp>
+
+        * apps/baygui/gchat: IRC‚à‚Ç‚«’Ç‰Á
+
 2004-10-30  higepon  <higepon@users.sourceforge.jp>
 
         * .cvsignore‚Ì®—
