--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-31  bayside  <bayside@users.sourceforge.jp>
+
+        * servers/baygui: ウィンドウ移動時に余計なウィンドウ描画が走らないように修正
+
+        * apps/baygui/gnullpo: ぬるぽボタン追加
+
 2004-10-30  bayside  <bayside@users.sourceforge.jp>
 
         * apps/baygui/gchat: IRCもどき追加
