--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-31  Yamami  <yamamimail@users.sourceforge.jp>
+
+        * src/servers/mones Code:Mones Ver0.14 MoTcp,MonesLoaderクラス追加 QEMU NIC認識
+
 2004-10-31  bayside  <bayside@users.sourceforge.jp>
 
         * servers/baygui: ウィンドウ移動時に余計なウィンドウ描画が走らないように修正
