clean *.bm5 files at make clean

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-01  bayside  <bayside@users.sourceforge.jp>
+
+        * apps/baygui/gnullpo/Makefile (CLEANFILES): BM5‚Ìíœ‚ğ’Ç‰Á
+
 2004-11-01  higepon  <higepon@users.sourceforge.jp>
 
         * apps/baygui/ghebtn/Makefile (CLEANFILES): BM5‚Ìíœ‚ğ’Ç‰Á
