change bitmap filename

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-02  bayside  <bayside@users.sourceforge.jp>
+
+        * apps/baygui/gnullpo: nullpo.bmp ‚Æ gat.bmp ‚É–¼Ì•ÏX
+
 2004-11-01  bayside  <bayside@users.sourceforge.jp>
 
         * apps/baygui/gnullpo/Makefile (CLEANFILES): BM5‚Ìíœ‚ğ’Ç‰Á
