--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,6 +1,16 @@
 2004-11-06  Yamami  <yamamimail@users.sourceforge.jp>
 
         * include/gui/System/Event.h: コメント記述
+        
+        * include/gui/System/Array.h: コメント記述
+
+        * include/gui/System/Object.h: コメント記述
+
+        * include/gui/System/Pointer.h: コメント記述
+
+        * include/gui/System/String.h: コメント記述
+
+        * src/lib/gui/System/String.cpp: コメント記述
 
 2004-11-06  bayside  <bayside@users.sourceforge.jp>
 
