ImeManager many fixed

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-08  bayside  <bayside@users.sourceforge.jp>
+
+        * src/lib/baygui: IMEŒn‘å•C³
+
+        * include/baygui: IMEŒn‘å•C³
+
 2004-11-08  Yamami  <yamamimail@users.sourceforge.jp>
 
         * apps/gui/mflupin/: MFLUPIN(MonaForms”Å LUPIN) ’Ç‰Á
