--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,11 @@
+2004-11-14  Yamami  <yamamimail@users.sourceforge.jp>
+
+        * samples/non-gui/Makefile: YamamiをデフォルトMake非対象
+        
+        * samples/non-gui/yamami/main.cpp: テストコード追加
+        
+        * include/sys/types.h: Mones用のメッセージ追加
+
 2004-11-12  bayside  <bayside@users.sourceforge.jp>
 
         * src/lib/baygui/ImeManager.cpp: IMEオン・オフのキーバインド追加と細かい修正
