--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-14  Yamami  <yamamimail@users.sourceforge.jp>
+
+        * samples/non-gui/yamami/main.cpp: テストコード追加
+        
+        * src/servers/mones/: ARP要求、IP送信実装(QEMU未動作 デバッグ中)
+
 2004-11-16  higepon  <higepon@users.sourceforge.jp>
 
         * apps/non-gui/ata/IDEDriver.cpp (sendPacketCommand): atapi read(10)がうまくいかない
