--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,6 +1,7 @@
 2004-11-20  higepon  <higepon@users.sourceforge.jp>
 
         * apps/non-gui/ata/IDEDriver.cpp: 不要関数削除
+                                          (selectDevice): デバイスセレクションプロトコル修正
 
 2004-11-18  higepon  <higepon@users.sourceforge.jp>
 
