--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,7 @@
 2004-11-20  higepon  <higepon@users.sourceforge.jp>
 
+        * apps/non-gui/ata/IDEDriver.h: IStorageDeviceを継承するように変更(atapi9)
+
         * apps/non-gui/ata/main.cpp (MonaMain): 4096byteはきちんと読めていることを検証。
 
         * apps/non-gui/ata/IDEDriver.cpp (read): commandRead10を5回リトライするようにした。
