--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-21  higepon  <higepon@users.sourceforge.jp>
+
+        * src/lib/monapi/MemoryManager.cpp : ユーザー側malloc時に情報ブロック破壊検出ロジックを追加
+
 2004-11-20  higepon  <higepon@users.sourceforge.jp>
 
         * apps/non-gui/ata/iso9660.cpp : ISO9660のコードの取り込み(atapi10)
