--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,11 @@
+2004-11-23  Yamami  <yamamimail@users.sourceforge.jp>
+
+        * samples/non-gui/yamami/main.cpp: テストコード追加
+
+        * src/servers/mones/: ICMP応答実装中。不要なデバッグprint削除
+
+        * include/sys/types.h: Mones用のメッセージ追加
+
 2004-11-23  higepon  <higepon@users.sourceforge.jp>
 
         * apps/non-gui/ata/ISO9660.cpp : CDからファイルが読めた。(ver_0_3_0alpha2のタグをつけた。)
