--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,9 @@
 2004-11-26  higepon  <higepon@users.sourceforge.jp>
 
+        * src/kernel/kernel.cpp : 不要コードの削除
+
+        * src/servers/file/file.cpp (ReadFile): CDのファイルシステムでは小文字･大文字を区別しない。
+
         * src/servers/file/ISO9660.cpp : fileサーバにCDコードを投入。
 
 2004-11-24  higepon  <higepon@users.sourceforge.jp>
