--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-30  higepon  <higepon@users.sourceforge.jp>
+
+        * src/lib/monapi/io.cpp (monapi_set_irq): I/O関連の関数を集約
+
 2004-11-28  bayside  <bayside@users.sourceforge.jp>
 
         * apps/baygui: リファクタリング
