--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-08  higepon  <higepon@users.sourceforge.jp>
+
+        * src/servers/mouse/main.cpp (enableKeyboard): バグ修正
+
 2004-11-28  bayside  <bayside@users.sourceforge.jp>
 
         * src/servers/gui/window.cpp: コメント追加
