--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,14 @@
+2004-12-12  higepon  <higepon@users.sourceforge.jp>
+
+        * tools/fileheader/main.cpp: ツール追加
+
+        * src/kernel/Makefile (KERNEL_ADDR): REL_KERNEL_ADDRに改名
+                              (MONA_HEADER_SIZE):定義追加 
+
+        * src/kernel/secondboot.asm :KERNEL_ADDR + 0x10に jmp 
+
+        * src/kernel/Makefile (CXXFLAGS): KERNEL_ADDR追加
+
 2004-12-09  higepon  <higepon@users.sourceforge.jp>
 
         * src/Makefile (install): kernelよりもserversを先にビルドするように変更。
